--- a/Assignment-2/makefile
+++ b/Assignment-2/makefile
@@ -2,13 +2,16 @@ CC = gcc
 CFLAGS = -Wall -Wextra -pedantic -std=c11
 LIBS = -lm
 
-all: cmp copy encode decode
+all: cmp copy encode decode stshell
+
+stshell: stshell.o
+	$(CC) $(CFLAGS) stshell.o -o stshell
 
 cmp: cmp.o
-	$(CC) $(CFLAGS) cmp.o -o cmp $(LIBS)
+	$(CC) $(CFLAGS) cmp.o -o cmp
 
 copy: copy.o
-	$(CC) $(CFLAGS) copy.o -o copy $(LIBS)
+	$(CC) $(CFLAGS) copy.o -o copy
 
 encode: encode.o libcodecA.so libcodecB.so
 	$(CC) $(CFLAGS) encode.o -L. -lcodecA -lcodecB -o encode $(LIBS)
@@ -21,6 +24,9 @@ libcodecA.so: codecA.o
 
 libcodecB.so: codecB.o
 	$(CC) $(CFLAGS) -shared -o libcodecB.so codecB.o
+
+stshell.o: stshell.c
+	$(CC) $(CFLAGS) -c stshell.c
 
 cmp.o: cmp.c
 	$(CC) $(CFLAGS) -c cmp.c
@@ -41,4 +47,4 @@ codecB.o: codecB.c
 	$(CC) $(CFLAGS) -c -fPIC codecB.c
 
 clean:
-	rm -f *.o *.so cmp copy encode decode
+	rm -f *.o *.so cmp copy encode decode stshell
